Bug 832554: Add #ifdef guards around static functions in /gfx/thebes that aren't used on android, to fix android-only -Wunused-function build warnings. r=BenWa a=nonlibxul